# zephyr_test_driver

./: CMakeLists.txt  README.md  prj.conf  sample.yaml
boards/: altera_max10.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/i2c/: CMakeLists.txt  Kconfig  i2c_dev.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/i2c/: foo,i2c-driver.yaml
include/i2c/: i2c_dev.h
src/: main.c
